--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -9,6 +9,7 @@
     {% for recipe in recipes %}
     <div class="card">
         <div><img src="{{ recipe.image.url }}" alt=""></div>
+        <div><p class="info_author">Автор: {{ recipe.author|default:"неизвестен" }}</p></div>
         <div class="dish_title">{{ recipe.name }}</div>
         <div class="dish_desc">{{ recipe.description | truncatewords:30 }}</div>
         <div class="card_bot">
